adding API test to register new tenant